--- a/stage02-projeto02/index.html
+++ b/stage02-projeto02/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Treine me</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="page">
-      <header>
-        <img src="images/logo.svg" alt="Treine.me" />
+      <nav>
+        <a id="logo" href="#">
+          <img src="images/logo.svg" alt="Treine.me" />
+        </a>
+        <ul>
+          <li><a  href="#">Home</li></a>
+          <li><a  href="#">Sobre</li></a>
+          <li><a  href="#">Treinar</li></a>
+        </ul>
+      </nav>
 
-        <nav>
-          <ul>
-            <li>Home</li>
-            <li>Sobre</li>
-            <li>Treinar</li>
-          </ul>
-        </nav>
-
-      </header>
       <main>
 
         <section class="text">
-          <h1>Treinos exclusivos para você!</h1>
+          <h1>Treinos <span>exclusivos</span> para você!</h1>
 
           <p>
             Nós criamos treinos
             <strong>exclusivos e únicos para você</strong>.<br />
-            Invista no seu corpo e <strong>tenha muito mais performance</strong> e qualidade de vida.
+            Invista no seu corpo e
+            <strong>tenha muito mais performance</strong> e qualidade de vida.
           </p>
 
           <button>
@@ -40,14 +47,19 @@
         </section>
 
         <img src="images/img.png" alt="Desenho de uma mulher pulando corda" />
+        
       </main>
       <footer>
-        fale concosco no instagram 
-        <a href="https://instragram.com/treineme" target="_blank">@treine.me</a> 
+        fale concosco no instagram
+        <a href="https://instragram.com/treineme" target="_blank">
+          @treine.me
+        </a>
       </footer>
     </div>
 
-    <img src="images/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
-
+    <img
+      src="images/balls.svg"
+      alt="Bolinhas decorativas verdes no canto inferior direito da página."
+    />
   </body>
 </html>
