stage 2: finaliza segundo projeto

--- a/stage02-projeto02/index.html
+++ b/stage02-projeto02/index.html
@@ -57,7 +57,7 @@
       </footer>
     </div>
 
-    <img
+    <img id="balls"
       src="images/balls.svg"
       alt="Bolinhas decorativas verdes no canto inferior direito da página."
     />
