stage 3: adiciona campo categoria com estailizacao do select no terceiro projeto

--- a/stage-03-projeto03/index.html
+++ b/stage-03-projeto03/index.html
@@ -45,6 +45,17 @@
               <textarea id="event-info" cols="30" rows="10"></textarea>
             </div>
 
+            <div class="input-wrapper">
+              <label for="event-category">Categoria</span></label>
+              <select id="event-category">
+                <option value="default" disabled>Categoria</option>
+                <option value="live">Ao vivo</option>
+                <option value="podcast">Podcast</option>
+                <option value="mentorship">Mentoria</option>
+              </select>
+            </div> 
+
+
 
           </div>
         </fieldset>
