--- a/stage04-logica-programacao/exercicios/06-pratica-04/index.html
+++ b/stage04-logica-programacao/exercicios/06-pratica-04/index.html
@@ -4,15 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boletimm</title>
+  <title>Boletim</title>
 </head>
 <body>
-  <!-- <header>
-    <h1>BOLETIM ESCOLAR</h1>
-  </header>
-  <main>
-    <p><strong>Nome do aluno:</strong> </p>
-    <input type="text" name="Nome do Aluno" id="nameStudent"> -->
-  </main>
+  <script src="./script.js"></script>
 </body>
 </html>
