stage 5: finaliza projeto focus timer

--- a/stage05-projeto07/index.html
+++ b/stage05-projeto07/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
@@ -111,7 +112,7 @@
     </main>
 
     <footer>
-      <button class="sound-on">
+      <button class="sound-on hide">
         <svg
           width="64"
           height="64"
@@ -139,7 +140,7 @@
           />
         </svg>
       </button>
-      <button class="sound-off hide">
+      <button class="sound-off">
         <svg
           width="64"
           height="64"
@@ -176,6 +177,6 @@
         </svg>
       </button>
     </footer>
-    <script src="script.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
