--- a/stage05-projeto08/index.html
+++ b/stage05-projeto08/index.html
@@ -24,18 +24,19 @@
           <div class="inputs-wrapper">
             <div class="input-wrapper">
               <label for="weight">Peso (kg)</label>
-              <input id="weight" type="text" placeholder="65" />
+              <input id="weight" type="number" placeholder="65" />
             </div>
             <div class="input-wrapper">
               <label for="height">Altura (cm)</label>
-              <input id="height" type="text" placeholder="165" />
+              <input id="height" type="number" placeholder="165" />
             </div>
           </div>
-          <button type="submit">
+          <button class="btn" type="submit">
             Calcular IMC
             <img src="./assets/arrow.svg" alt="seta apontando para a direita" />
           </button>
         </form>
+        <div class="result hide"></div>
       </main>
     </div>
 
