adiciona modal estilizado e funcional

--- a/stage05-projeto08/index.html
+++ b/stage05-projeto08/index.html
@@ -17,6 +17,11 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
+
+
+    <div class="alert-error">
+      Digite somente números
+    </div>
     <div class="container">
       <main class="card">
         <form action="">
@@ -40,10 +45,13 @@
       </main>
     </div>
 
-    <div class="modal-wrapper">
+    <div class="modal-wrapper ">
       <div class="modal card">
         <h2 class="title">
-          Seu IMC é de 28
+          <button class="close">
+            <img src="./assets/close.svg" alt="imagem de botão para fechar popup">
+          </button>
+          <span>Seu IMC é de 28</span>
         </h2>
       </div>
     </div>
