--- a/stage05-projeto08/index.html
+++ b/stage05-projeto08/index.html
@@ -6,22 +6,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora IMC</title>
-
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="style.css" />
-
-    <script src="./script.js" defer></script>
+    <script src="./js/script.js" defer type="module"></script>
   </head>
   <body>
-
-
-    <div class="alert-error">
-      Digite somente números
-    </div>
+    <div class="alert-error">Digite valores válidos</div>
     <div class="container">
       <main class="card">
         <form action="">
@@ -41,15 +34,17 @@
             <img src="./assets/arrow.svg" alt="seta apontando para a direita" />
           </button>
         </form>
-        <div class="result hide"></div>
       </main>
     </div>
 
-    <div class="modal-wrapper ">
+    <div class="modal-wrapper">
       <div class="modal card">
         <h2 class="title">
           <button class="close">
-            <img src="./assets/close.svg" alt="imagem de botão para fechar popup">
+            <img
+              src="./assets/close.svg"
+              alt="imagem de botão para fechar popup"
+            />
           </button>
           <span>Seu IMC é de 28</span>
         </h2>
